--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "run-code",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
+    "siyuan_api_cache_lib": "latest",
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@vitejs/plugin-legacy": "^1.5.1",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.5",
     "typescript": "^4.3.2",
