--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
+    "strictNullChecks": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"]
   },
