--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,59 +1,51 @@
-name: build
+# This is a basic workflow to help you get started with Actions
 
+name: CI
+
+# Controls when the action will run.
 on:
+  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    tags:
-      - "v*"
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  xgo:
-    strategy:
-      fail-fast: false
-      matrix:
-        go_version:
-          - 1.13.x
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Build with xgo
-        uses: crazy-max/ghaction-xgo@v1
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
         with:
-          xgo_version: latest
-          go_version: ${{ matrix.go_version }}
-          pkg: src
-          dest: build
-          prefix: md2website
-          targets: windows/386,windows/amd64,linux/386,linux/amd64,darwin/386,darwin/amd64
-          v: true
-          x: false
-          race: false
-          ldflags: -s -w
-          buildmode: default
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
 
-      - name: cd build
-        run: cd build && ls
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.0.2
+          run_install: true
 
-      - name: chmod app
-        run: chmod 777 ./build/md2website-linux-amd64
-
-      - name: build doc
-        run: ./build/md2website-linux-amd64 -SourceDir ./test-doc/思源笔记用户指南 -OutDir ./outHTML -TemplateDir ./src/views/ -SqlitePath ./test-doc/siyuan.db
-
-      - name: zip views
-        run: zip -q -r ./build/views.zip ./src/views/
+      - name: build
+        run: pnpm run build
 
       - name: Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages
-          build_dir: outHTML
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
-
-      - name: Release apk
-        uses: ncipollo/release-action@v1.5.0
-        with:
-          artifacts: "build/*"
-          token: ${{ secrets.GIT_TOKEN }}
