--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   ],
   "dependencies": {
     "lz-string": "^1.4.4",
+    "prismjs": "^1.24.1",
     "siyuan_api_cache_lib": "latest",
-    "vue": "^3.1.5"
+    "vue": "^3.2.2"
   },
   "devDependencies": {
     "@types/lz-string": "^1.3.34",
+    "@types/prismjs": "^1.16.6",
     "@vitejs/plugin-legacy": "^1.5.1",
     "@vitejs/plugin-vue": "^1.4.0",
-    "@vue/compiler-sfc": "^3.1.5",
+    "@vue/compiler-sfc": "^3.2.2",
     "typescript": "^4.3.5",
     "vite": "^2.4.4",
     "vue-tsc": "^0.2.2"
