--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Release
         uses: ncipollo/release-action@v1.5.0
         with:
+          allowUpdates: true
           artifacts: "dist/*.zip"
           bodyFile: "release.md"
           token: ${{ secrets.GIT_TOKEN }}
