--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
           run_install: true
 
       - name: build
-        run: rm -r dist && pnpm run build
+        run: pnpm run build
 
       - name: Deploy to GitHub Pages
         if: success()
