--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
 
       - name: zip
-        run: zip -q -r ./dist/run-code.zip ./dist/
+        run: zip -q -r ./dist/package.zip ./dist/
       - name: Release
         uses: ncipollo/release-action@v1.5.0
         with:
