--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "v1.1.8",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && node ./widget.json.js",
+    "build": "vite build && tsx ./widget.json.ts",
     "serve": "vite preview"
   },
   "keywords": [
@@ -23,10 +23,12 @@
   },
   "devDependencies": {
     "@types/lz-string": "^1.5.0",
+    "@types/node": "^20.12.11",
     "@types/prismjs": "^1.26.4",
     "@vitejs/plugin-legacy": "^1.8.2",
     "@vitejs/plugin-vue": "^1.10.2",
     "@vue/compiler-sfc": "^3.4.27",
+    "tsx": "^4.10.2",
     "typescript": "^4.9.5",
     "vite": "^2.9.18"
   }
