--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "author": "崮生",
   "version": "v1.1.8",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build && tsx ./widget.json.ts",
+    "dev": "vite build --watch",
+    "build": "tsx ./scripts/widget.json.ts && vite build",
     "serve": "vite preview"
   },
   "keywords": [
