--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: zip
-        run: zip -q -r ./dist/package.zip ./dist/
+        run: cd ./dist && zip -q -r ./package.zip .
+
       - name: Release
         uses: ncipollo/release-action@v1.5.0
         with:
